Added Logo to home page

--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -223,8 +223,8 @@
 			</p>
 		</div>
 		<div id="article">
-			<h1> SensorACT </h1>
-			Logo goes here
+			
+			<img src="@{'/public/images/logo_alternate.jpg'}" alt="Logo"/>
 			Intro video comes here
 		</div>
 	</body>
