--- a/repositoryUserInterface/public/stylesheets/styles.css
+++ b/repositoryUserInterface/public/stylesheets/styles.css
@@ -2,32 +2,32 @@ body {
 	width: 700px;
 	margin: auto;
 }
-
 ul, p, h2, h1 {
 	font-family: Arial, "MS Trebuchet", sans-serif;
 	padding: 10px;
 }
-
 ul li {
-	display:inline-block;
+	display: inline-block;
 }
-
 ul li a {
 	background: #333;
 	color: #fff;
-	padding:10px;
+	padding: 10px;
 	text-decoration: none;
 }
-
 ul li a:hover {
 	text-decoration: underline;
 }
-
 label {
 	width: 200px;
 	display: inline-block;
 }
-
 input.error {
 	border: 5px solid #f00;
+}
+img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding:10px;
 }
