Removed unneccessary files

--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -225,7 +225,7 @@
 		<div id="article">
 			
 			<img src="@{'/public/images/logo_alternate.jpg'}" alt="Logo"/>
-			Intro video comes here
+			Intro video will be added here
 		</div>
 	</body>
 </html>
