Added backgrounds and logos

--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -188,6 +188,9 @@
 		</script>
 	</head>
 	<body>
+		
+		<!--<img alt="full screen background image" src="@{'/public/images/background.jpg'}" id="full-screen-background-image">-->
+		<div><img src="@{'/public/images/logo_transparent.png'}" alt="Logo"/></div>
 		<ul>
 			<li>
 				<a href="#sign_in">Sign In</a>
@@ -246,8 +249,9 @@
 		</div>
 		<div id="article">
 			
-			<img src="@{'/public/images/logo_alternate.jpg'}" alt="Logo"/>
+			
 			Intro video will be added at this location
+			CC Sensors/Actuators B/G image to be added
 		</div>
 	</body>
 </html>
