--- a/repositoryUserInterface/public/stylesheets/styles.css
+++ b/repositoryUserInterface/public/stylesheets/styles.css
@@ -1,7 +1,4 @@
-body {
-	width: 700px;
-	margin: auto;
-}
+
 ul, p, h2, h1 {
 	font-family: Arial, "MS Trebuchet", sans-serif;
 	padding: 10px;
@@ -29,11 +26,23 @@ img {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	padding:10px;
+	
 }
 div.errorDiv
 {
 	background: #000080;
 	color: #fff;
-	padding:20px;
+	
 }
+
+#full-screen-background-image {
+        z-index: -999;
+        min-height: 100%;
+        min-width: 1024px;
+        width: 100%;
+        height: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+        opacity:1;
+      }
