Added feature to be able to add repo to broker

--- a/repositoryUserInterface/app/views/Application/home.html
+++ b/repositoryUserInterface/app/views/Application/home.html
@@ -13,6 +13,7 @@
 				$("#devices").attr('href', URL_DEVICES);
 				$("#visualization").attr('href', URL_VISUALIZATION);
 				$("#logout").attr('href', URL_LOGOUT_USER);
+				$("#repositoryInformation").attr('href', URL_REPOSITORY_INFO);
 
 			});
 
@@ -25,6 +26,9 @@
 			</li>
 			<li>
 				<a id="visualization">Visualization</a>
+			</li>
+			<li>
+				<a id="repositoryInformation">Repository Information</a>
 			</li>
 			<li>
 				<a id="logout">Logout</a>
