--- a/repositoryUserInterface/app/views/Application/index.html
+++ b/repositoryUserInterface/app/views/Application/index.html
@@ -180,7 +180,7 @@
 		</script>
 	</head>
 	<body>
-		<!--<img alt="full screen background image" src="@{'/public/images/background.jpg'}" id="full-screen-background-image">-->
+		<img alt="full screen background image" src="@{'/public/images/background.jpg'}" id="full-screen-background-image">
 		<div><img src="@{'/public/images/logo_transparent.png'}" alt="Logo"/>
 		</div>
 		<ul>
