--- a/brokerUserInterface/app/views/Application/repository.html
+++ b/brokerUserInterface/app/views/Application/repository.html
@@ -8,8 +8,8 @@
 			$(document).ready(function() {
 
 				var repsonseFromServer;
-				
-					/*
+
+				/*
 				 * Adding the link attribute to Logout,Home element
 				 */
 				$("#logout").attr('href', URL_LOGOUT_USER);
@@ -21,11 +21,8 @@
 				//Hide all forms
 
 				$("#errorDiv").hide();
-				
-				$("#generateRepoKeyDiv").hide();
-				$("#generatedRepoKeyDiv").hide();
 
-			function alertError(errorMessage) {
+				function alertError(errorMessage) {
 					$("#errorDiv").html(errorMessage);
 					$("#errorDiv").fadeIn('slow');
 					return false;
@@ -37,86 +34,103 @@
 					return false;
 				}
 
-
-				function validateSignIn(username, password) {
+				function validateRepositoryRegistration(repoName, repoURL, repoKey) {
 					var flag = true;
-					if(username.length < MIN_LENGTH_USERNAME) {
-						$("#span_sign_in_username").text("Must be atleast " + MIN_LENGTH_USERNAME + " characters");
-						$("#sign_in_username").addClass("error");
+					if(repoName.length < 1) {
+						$("#repoNameSpan").text("Must be atleast " + 1 + " characters");
+						$("#repoName").addClass("error");
 						flag = false;
 					} else {
-						$("#span_sign_in_username").text("");
+						$("#repoNameSpan").text("");
 
-						$("#sign_in_username").removeClass("error")
+						$("#repoName").removeClass("error")
 					}
-					if(password.length < MIN_LENGTH_PASSWORD) {
-						$("#span_sign_in_password").text("Must be atleast " + MIN_LENGTH_PASSWORD + " characters");
-						$("#sign_in_password").addClass("error");
+					if(repoURL.length < 1) {
+						$("#repoURLSpan").text("Must be atleast " + 1 + " characters");
+						$("#repoURL").addClass("error");
 						flag = false;
 					} else {
-						$("#span_sign_in_password").text("");
-						$("#sign_in_password").removeClass("error")
+						$("#repoURLSpan").text("");
+						$("#repoURL").removeClass("error")
+					}
+					
+						if(repoKey.length !=32) {
+						$("#repoKeySpan").text("Must be 32 characters");
+						$("#repoKey").addClass("error");
+						flag = false;
+					} else {
+						$("#repoKeySpan").text("");
+						$("#repoKey").removeClass("error")
 					}
 					return flag;
 				}
+
 				//Get the repository information
 				try {
 
-					$.get(URL_GET_REPOSITORY_INFO, function(data) {
+					$.get(URL_LIST_ALL_REPOSITORIES, function(data) {
 						responseFromServer = data;
-						alert(responseFromServer[REPOSITORY_NAME]);
 
 					});
 					if(responseFromServer.hasOwnProperty(RESPONSE_STATUS_CODE)) {
 						alertError("Following error occured " + responseFromServer[RESPONSE_MESSAGE]);
 					} else {
-						$("#repoName").html(responseFromServer[REPOSITORY_NAME]);
-						$("#repoURL").html(responseFromServer[REPOSITORY_URL]);
+						//Code to display the registered repositories
+						
+							var repoList = responseFromServer[REPOSITORY_LIST];
+							$("#repoInfo").html("<table>")
+							for(var i = 0; i < repoList.length; i++) {
+								//Append elements to a table
+								$("#repoInfo").append("<tr><td> Repo Name </td><td> " + repoList[i][REPOSITORY_NAME] + " </td><td> Repo URL " + repoList[i][REPOSITORY_URL] + "</td></tr>");
+							}
+
+							//Close Table
+							$("#repoInfo").append("</table>");
+						}
+
 					}
 
-				} catch(e) {
+				 catch(e) {
 					alertError(e);
 				}
-				
-				$("#generateRepoKey").click(function()
-				{
-					$("#generateRepoKeyDiv").fadeIn('slow');
-				});
-				
-					$("#Done").click(function() {
-					sign_in_username = $("#sign_in_username").val();
-					sign_in_password = $("#sign_in_password").val();
-					sign_in_validation_state = validateSignIn(sign_in_username, sign_in_password);
-					if(sign_in_validation_state) {
-						var sign_in = {};
-						sign_in[USERNAME] = sign_in_username;
-						sign_in[PASSWORD] = sign_in_password;
-						sign_in[SECRET_KEY]=FAKE_SECRET_KEY;
-						//Submit the login details
-						try {
 
-							$.post(URL_GENERATE_SECRET_KEY, JSON.stringify(sign_in), function(data) {
+				$("#Done").click(function() {
+					var repoName = $("#repoName").val();
+					var repoURL = $("#repoURL").val();
+					var repoKey = $("#repoKey").val();
+					
+					validation_state = validateRepositoryRegistration(repoName, repoURL, repoKey);
+					if(validation_state) {
+						
+						var repoInfo = {};
+						repoInfo[REPOSITORY_NAME] = repoName;
+						repoInfo[REPOSITORY_URL] = repoURL;
+						repoInfo[REPOSITORY_KEY] = repoKey;
+						repoInfo[SECRET_KEY] = FAKE_SECRET_KEY;
+						
+
+						try {
+							
+							$.post(URL_REGISTER_REPOSITORY, JSON.stringify(repoInfo), function(data) {
 								responseFromServer = data;
 
 							});
-							if(responseFromServer[RESPONSE_STATUS_CODE]!=0) {
-						alertError("Following error occured " + responseFromServer[RESPONSE_MESSAGE]);
-					} else {
-						$("#generatedKey").html(responseFromServer[RESPONSE_MESSAGE]);
-						$("#generatedRepoKeyDiv").show();
-					}
 							
+							
+							if(responseFromServer[RESPONSE_STATUS_CODE] == 0) {
+								window.location.reload();
+							} else {
+								alertError(responseFromServer[RESPONSE_MESSAGE]);
+							}
 
 						} catch(e) {
 							alertError(e);
 						}
+
 					}
 
 				});
-				
-
 				//If button is clicked generate a call to get the secret key from repo
-				
 
 			});
 
@@ -132,40 +146,23 @@
 			</li>
 		</ul>
 		<div id="errorDiv" class="errorDiv"></div>
-		<div id="repoInfo">
-			Please note down this information carefully for registering your repository account with the Broker
+		<div id="repoInfo"></div>
+		<div id="registerRepository">
+			<label>Enter name of the repository</label>
+			<input id="repoName">
+			</input>
+			<span id="repoNameSpan"></span>
 			<br/>
-			<label>Repo Name</label>
-			<span id="repoName"></span>
+			<label>Enter URL of the repository</label>
+			<input id="repoURL">
+			</input>
+			<span id="repoURLSpan"></span>
 			<br/>
-			<label>Repo URL</label>
-			<span id="repoURL"></span>
-			<br/>
-			<button id ="generateRepoKey">
-				Generate Key to register repository to Broker
-			</button>
-			<div id="generateRepoKeyDiv">
-				<h2>Sign In with your Repository Credentials</h2>
-			<p>
-				<label for="sign_in_username">Username</label>
-				<input type="text" name="sign_in_username" id="sign_in_username" />
-				<span id="span_sign_in_username"></span>
-			</p>
-			<p>
-				<label for="sign_in_password">Password</label>
-				<input type="password" name="sign_in_password" id="sign_in_password" />
-				<span id="span_sign_in_password"></span>
-			</p>
-			<button id ="Done">
-				Done
-			</button>
-			</div>
-			<div id="generatedRepoKeyDiv">
-				<label>Generated Key</label>
-				<span id="generatedKey"></span>
-				
-				
-			</div>
+			<label>Enter token generated by the repository</label>
+			<input id="repoKey">
+			</input>
+			<span id="repoKeySpan"></span>
+			<button id="Done">Done</button>
 		</div>
 	</body>
 </html>
